--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "dependencies": {
     "ionic": "v1.0.0-beta.8",
-    "angularfire": "~0.7.1",
+    "angularfire": "~0.8.0",
     "angular-route": "~1.2.19",
-    "underscore": "~1.6.0"
-
+    "underscore": "~1.6.0",
+    "moment": "~2.7.0",
+    "angular-momentjs": "~0.1.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.17",
