--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,7 @@
 {
-  "directory": "app/bower_components"
+  "directory": "app/bower_components",
+    "registry": "http://bower.herokuapp.com",
+    "proxy": "http://proxy.pal.sap.corp:8080",
+    "https-proxy": "http://proxy.pal.sap.corp:8080",
+    "strict-ssl": false
 }
