--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,17 @@
 {
-  "name": "IACS",
-  "version": "0.1.0",
-  "dependencies": {
-    "ionic": "driftyco/ionic-bower#v1.0.0-beta.10",
-    "angularfire": null,
-    "angular-route": null,
-    "underscore": "~1.6.0",
-    "moment": "~2.7.0",
-    "angular-momentjs": null,
-    "elasticsearch": "~2.4.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "~1.2.17",
-    "angular-scenario": "~1.2.17",
-    "ionic": "driftyco/ionic-bower#master"
-  }
+    "name": "IACS",
+    "version": "0.1.0",
+    "dependencies": {
+        "ionic": "driftyco/ionic-bower#v1.0.0-beta.10",
+        "angularfire": null,
+        "angular-route": null,
+        "underscore": "~1.6.0",
+        "moment": "~2.7.0",
+        "angular-momentjs": null,
+        "elasticsearch": "~2.4.0"
+    },
+    "devDependencies": {
+        "angular-mocks": "~1.2.17",
+        "angular-scenario": "~1.2.17"
+    }
 }
